--- a/battleship.html
+++ b/battleship.html
@@ -10,16 +10,17 @@
 <body>
 <div id="inputArea">
 <form>
-    Name:<input type="text" id="playerName" value="Bob"><br>
+    Server URL:<input type="text" id="serverUrl" value="http://localhost:5000/"><br><br>
+    Player Name:<input type="text" id="playerName" value="Bob"><br><br>
     No spaces for the game name for the moment.<br>
     Game:<input type="text" id="gameId" value="MyGame"><button type="button" id="joinBtn">Join A Game</button><button type="button" id="createBtn">Create A Game</button><br>
+</form>
 </div>
 
-<button type="button" id="testBtn">Test</button>
+<div id="boardDiv"/>
+
 <button type="button" id="clearBtn">Clear</button>
 <button type="button" id="logGamesBtn">List Games</button>
-</form>
-<div id="boardDiv"/>
 <div id="logDiv"/>
 
 </body>
