Add more bits to it, like the player board

--- a/battleship.html
+++ b/battleship.html
@@ -17,10 +17,13 @@
 </form>
 </div>
 
-<div id="boardDiv"/>
+<div id="playerBoardDiv">Pboard</div>
+<div id="opponentBoardDiv"/>
 
+<div id="controls">
 <button type="button" id="clearBtn">Clear</button>
 <button type="button" id="logGamesBtn">List Games</button>
+</div>
 <div id="logDiv"/>
 
 </body>
