Removed jquery. Got websockets working. Plus other bits.

--- a/battleship.html
+++ b/battleship.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-<title>Battle Ship</title>
-<script type="text/javascript" src="jquery-3.3.1.js"></script>
-<script type="text/javascript" src="battleship.js"></script>
+<title>Battle Ships</title>
 
 </head>
 
@@ -38,8 +36,9 @@
 <button type="button" id="clearBtn">Clear</button>
 <button type="button" id="logGamesBtn">List Games</button>
 </div>
-<div id="logDiv"/>
+<div id="logDiv"><p></p></div>
 
 </body>
 
 </html>
+<script type="text/javascript" src="battleship.js"></script>
