Refactored some more with a manager and got the messaging working.

--- a/battleship.html
+++ b/battleship.html
@@ -11,7 +11,7 @@
     Server URL:<input type="text" id="serverUrl" value="http://localhost:5000/"><br><br>
     Player Name:<input type="text" id="playerName" value="Bob"><br><br>
     No spaces for the game name for the moment.<br>
-    Game:<input type="text" id="gameId" value="MyGame">
+    Game:<input type="text" id="gameName" value="MyGame">
     <button type="button" id="joinBtn">Join A Game</button>
     <button type="button" id="createBtn">Create A Game</button>
     <button type="button" id="beginBtn" disabled>Start The Game</button><br>
