--- a/battleship.html
+++ b/battleship.html
@@ -8,7 +8,7 @@
 <body>
 <div id="inputArea">
 <form>
-    Server URL:<input type="text" id="serverUrl" value="http://localhost:5000/"><br><br>
+    <!-- Server Address:<input type="text" id="serverAddr"><br><br> -->
     Player Name:<input type="text" id="playerName" value="Bob"><br><br>
     No spaces for the game name for the moment.<br>
     Game:<input type="text" id="gameName" value="MyGame">
