Got the hosting working on other devices on the local network. Player around with touch UI and caching.

--- a/battleship.html
+++ b/battleship.html
@@ -1,8 +1,10 @@
 <html>
-
+   
 <head>
-<title>Battle Ships</title>
-
+    <title>Battle Ships</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 </head>
 
 <body>
@@ -23,11 +25,11 @@
         <tr>
             <td>
                 Player Board<br>
-                <canvas id="playerBoard" width="200" height="200"/>
+                <canvas id="playerBoard" width="300" height="300"/>
             </td>
             <td>
                 Opponent Board<br>
-                <canvas id="opponentBoard" width="200" height="200"/>
+                <canvas id="opponentBoard" width="300" height="300"/>
             </td>
         </tr>
     </table>
@@ -44,4 +46,4 @@
 </body>
 
 </html>
-<script type="text/javascript" src="battleship.js"></script>
+<script type="text/javascript" src="battleship.js?v=8"></script>
