Added animations... because why not.

--- a/battleship.html
+++ b/battleship.html
@@ -5,7 +5,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <script type="text/javascript" src="battleship.js?v=12"></script>
+    <script type="text/javascript" src="particles.js"></script>
+    <script type="text/javascript" src="battleship.js"></script>
 </head>
 
 <body onload="onLoadInitialise()">
@@ -26,11 +27,11 @@
         <tr>
             <td>
                 Player Board<br>
-                <canvas id="playerBoard" width="300" height="300"/>
+                <canvas id="playerArea" width="300" height="300"/>
             </td>
             <td>
                 Opponent Board<br>
-                <canvas id="opponentBoard" width="300" height="300"/>
+                <canvas id="opponentArea" width="300" height="300"/>
             </td>
         </tr>
     </table>
