--- a/particles.html
+++ b/particles.html
@@ -5,5 +5,6 @@
     <canvas id="1" width="400" height="400" onclick="placeParticleExplosion(this, event)" style="border:1px solid #000000;"></canvas>
     <canvas id="2" width="400" height="400" onclick="placeParticleSplash(this, event)" style="border:1px solid #000000;"></canvas>
     <canvas id="3" width="400" height="400" onclick="placeParticleFire(this, event)" style="border:1px solid #000000;"></canvas>
+    <canvas id="4" width="400" height="400" onclick="placeAll(this, event)" style="border:1px solid #000000;"></canvas>
 </body>
 </html>
