--- a/particles.html
+++ b/particles.html
@@ -1,7 +1,9 @@
 <html>
+        <script type="text/javascript" src="perlin_noise.js"></script>
         <script type="text/javascript" src="particles.js"></script>
         <script type="text/javascript" src="particles_page.js"></script>
 <body>
+    <canvas id="0" width="400" height="400" onclick="placePerlinNoise(this, event)" onwheel="noiseScroll(this, event)" style="border:1px solid #000000;"></canvas>
     <canvas id="1" width="400" height="400" onclick="placeParticleExplosion(this, event)" style="border:1px solid #000000;"></canvas>
     <canvas id="2" width="400" height="400" onclick="placeParticleSplash(this, event)" style="border:1px solid #000000;"></canvas>
     <canvas id="3" width="400" height="400" onclick="placeParticleFire(this, event)" style="border:1px solid #000000;"></canvas>
